updated dependencies versions

--- a/Rise.Server/appsettings.json
+++ b/Rise.Server/appsettings.json
@@ -2,8 +2,8 @@
   "ConnectionStrings": {
     // Uncomment these lines appropriatly, also checkout UserSecrets: https://learn.microsoft.com/en-us/aspnet/core/security/app-secrets?view=aspnetcore-8.0&tabs=windows
     // Windows (when installed Visual Studio 2022+:
-    "MariaDb": "Server=10.11.1.165,3306;Database=rise;user=dev;Password=ops;",
-    "MariaTestDb" : ""
+    "MariaDb": "Server=localhost,3306;Database=rise;user=dev;Password=ops;",
+    "MariaTestDb": ""
     // Docker
     //"SqlServer": "Data Source=localhost,1433;Database=Hogent.RiseDb;User ID=SA;Password=p@ssw0rd;TrustServerCertificate=true"
   },
