--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "trailingSlash": false,
   "headers": [
     {
-      "source": "/static/(.*)",
+      "source": "/_framework/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
@@ -12,7 +12,16 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css|wasm|json|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
+      "source": "/css/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/js/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
