--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,47 +1,52 @@
-name: Deploy Frontend to Vercel
+name: Build and Deploy Frontend
 
 on:
   push:
-    branches: [main]
-    paths:
-      - "Rise.Client/**"
-      - "Rise.Shared/**"
+    branches: [ main ]
+    paths: 
+      - 'Rise.Client/**'
+      - 'Rise.Shared/**'
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: 8.0.x
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-
-      - name: Install TailwindCSS dependencies
-        working-directory: ./Rise.Client
-        run: npm install
-
-      - name: Build TailwindCSS
-        working-directory: ./Rise.Client
-        run: npm run build:css
-
-      - name: Restore .NET dependencies
-        run: dotnet restore
-
-      - name: Publish Blazor WebAssembly
-        run: dotnet publish Rise.Client/Rise.Client.csproj -c Release -o ./wwwroot
-
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v25
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: ./wwwroot/wwwroot
+    - uses: actions/checkout@v4
+    
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 8.0.x
+        
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        
+    - name: Install TailwindCSS dependencies
+      working-directory: ./Rise.Client
+      run: npm install
+      
+    - name: Build TailwindCSS
+      working-directory: ./Rise.Client
+      run: npm run build:css
+        
+    - name: Restore .NET dependencies
+      run: dotnet restore
+      
+    - name: Publish Blazor WebAssembly
+      run: dotnet publish Rise.Client/Rise.Client.csproj -c Release -o ./blazor-output
+      
+    - name: Copy built files to dist folder
+      run: |
+        mkdir -p dist
+        cp -r ./blazor-output/wwwroot/* ./dist/
+        
+    - name: Deploy to Vercel
+      uses: amondnet/vercel-action@v25
+      with:
+        vercel-token: ${{ secrets.VERCEL_TOKEN }}
+        vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+        working-directory: ./dist
