Fix database connection for production
- Set UsePostgres: true in production config
- Use direct Supabase connection string instead of environment variable substitution
- This should fix the MySQL connection error on Render

--- a/Rise.Server/appsettings.Production.json
+++ b/Rise.Server/appsettings.Production.json
@@ -6,8 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=#{SUPABASE_DB_HOST}#;Database=#{SUPABASE_DB_NAME}#;Username=#{SUPABASE_DB_USER}#;Password=#{SUPABASE_DB_PASSWORD}#;Port=5432;SSL Mode=Require;"
+    "PostgresDb": "Host=db.chjoehnudkekxwaypevm.supabase.co;Database=postgres;Username=postgres;Password=ucprxyE4F7pW3D;Port=5432;SSL Mode=Require;"
   },
+  "UsePostgres": true,
   "AllowedHosts": "*",
   "Auth0": {
     "Domain": "#{AUTH0_DOMAIN}#",
