Configure database connection via environment variables and improve connection parameters

--- a/Rise.Server/appsettings.Production.json
+++ b/Rise.Server/appsettings.Production.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PostgresDb": "Host=db.chjoehnudkekxwaypevm.supabase.co;Database=postgres;Username=postgres;Password=ucprxyE4F7pW3D;Port=5432;SSL Mode=Require;"
+    "PostgresDb": "Host=db.chjoehnudkekxwaypevm.supabase.co;Database=postgres;Username=postgres;Password=ucprxyE4F7pW3D;Port=5432;SSL Mode=Require;Trust Server Certificate=true;Timeout=30;Command Timeout=30;Pooling=true;Include Error Detail=true;"
   },
   "UsePostgres": true,
   "AllowedHosts": "*",
