--- a/render.yaml
+++ b/render.yaml
@@ -17,12 +17,8 @@ services:
         value: Production
       - key: ASPNETCORE_URLS
         value: http://0.0.0.0:10000
-      - key: SUPABASE_DB_HOST
-        sync: false
-      - key: SUPABASE_DB_NAME
-        sync: false
-      - key: SUPABASE_DB_USER
-        sync: false
-      - key: SUPABASE_DB_PASSWORD
-        sync: false
+      - key: ConnectionStrings__PostgresDb
+        value: "Host=db.chjoehnudkekxwaypevm.supabase.co;Database=postgres;Username=postgres;Password=ucprxyE4F7pW3D;Port=5432;SSL Mode=Require;Trust Server Certificate=true;Timeout=30;Command Timeout=30;Pooling=true;Include Error Detail=true;Options=-c default_transaction_isolation=read_committed;"
+      - key: UsePostgres
+        value: "true"
     healthCheckPath: /health
