--- a/render.yaml
+++ b/render.yaml
@@ -18,7 +18,7 @@ services:
       - key: ASPNETCORE_URLS
         value: http://0.0.0.0:10000
       - key: ConnectionStrings__PostgresDb
-        value: "Host=aws-0-us-east-1.pooler.supabase.com;Database=postgres;Username=postgres.chjoehnudkekxwaypevm;Password=ucprxyE4F7pW3D;Port=5432;SSL Mode=Require;Trust Server Certificate=true;Timeout=30;Command Timeout=30;Pooling=true;Include Error Detail=true;Server Compatibility Mode=NoTypeLoading;"
+        value: "Host=aws-0-us-east-1.pooler.supabase.com;Database=postgres;Username=postgres.chjoehnudkekxwaypevm;Password=ucprxyE4F7pW3D;Port=6543;SSL Mode=Require;Trust Server Certificate=true;Timeout=30;Command Timeout=30;Pooling=true;Include Error Detail=true;"
       - key: UsePostgres
         value: "true"
     healthCheckPath: /health
