Configure frontend to use Render backend API endpoint

--- a/Rise.Client/wwwroot/appsettings.Development.json
+++ b/Rise.Client/wwwroot/appsettings.Development.json
@@ -1,8 +1,8 @@
-﻿{
+{
   "Auth0": {
     "Authority": "https://dev-viwl48rh7lran3ul.us.auth0.com",
     "ClientId": "7eYbj8O9Zy9HRhVtrbjjz7ZvfCewQMWJ",
     "Audience": "https://api.gent5.com"
   },
-  "ApiBaseUrl": "https://lumiere-backend.onrender.com/api/"
+  "ApiBaseUrl": "https://localhost:5001/api/"
 }
