--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,13 +1,11 @@
 name: Build and Deploy Frontend
 
-# Temporarily disabled - using Vercel Git integration instead
 on:
-  workflow_dispatch: # Only run manually
-  # push:
-  #   branches: [main]
-  #   paths:
-  #     - "Rise.Client/**"
-  #     - "Rise.Shared/**"
+  push:
+    branches: [main]
+    paths:
+      - "Rise.Client/**"
+      - "Rise.Shared/**"
 
 jobs:
   build-and-deploy:
