--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -3,9 +3,7 @@ name: Build and Deploy Frontend
 on:
   push:
     branches: [main]
-    paths:
-      - "Rise.Client/**"
-      - "Rise.Shared/**"
+  # Removed paths filter to trigger on any push to main
 
 jobs:
   build-and-deploy:
