Fix API base URL to point to correct Render service endpoint

--- a/Rise.Client/wwwroot/appsettings.json
+++ b/Rise.Client/wwwroot/appsettings.json
@@ -4,5 +4,5 @@
     "ClientId": "7eYbj8O9Zy9HRhVtrbjjz7ZvfCewQMWJ",
     "Audience": "https://api.gent5.com"
   },
-  "ApiBaseUrl": "https://lumiere-backend.onrender.com/api/"
+  "ApiBaseUrl": "https://lumiere-backend-oz3e.onrender.com/api/"
 }
